# nabu-agent

./: README.md  pyproject.toml
src/nabu_agent/tools/: agents.py  misc.py  spotify.py  test.json  web_loader.py
src/nabu_agent/utils/: schemas.py
src/nabu_agent/workflows/main/: nodes.py  state.py  workflow.py
src/nabu_agent/workflows/spotify_agent/: nodes.py  workflow.py
tests/: test_classifier_agent.py  test_ha_agent.py  test_knowledge_agent.py  test_tool_agent.py
tests/samples/: test.m4a  test_musica.m4a  test_next_song.m4a  test_roba.m4a  test_roba2.m4a  test_roba3.m4a  test_temps.m4a  test_volume_up.m4a
